tests/NormalTests/paczka1/small_fuzzy/70293297.err
Error in line 2: kQkqc A520 34,6
Error in line 5: Lgm A520 62,2
Error in line 10: UZictT1uK A928 62,7
Error in line 1: oUi A928 53,6
